--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "typescript": "^4.5.4",
+    "typescript": "4.5.5",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.7.0",
     "webpack-node-externals": "^3.0.0"
