--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chalk": "^4",
     "change-case": "^4.1.2",
     "css-loader": "^6.5.1",
+    "esbuild-loader": "^2.21.0",
     "fs-extra": "^11.1.0",
     "glob": "^8.0.3",
     "lerna": "3.22.1",
@@ -44,7 +45,6 @@
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.3",
     "three": "^0.137.5",
-    "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "4.5.5",
