chore: Add .node-version and local.cfg.example files.

--- a/local.cfg.example
+++ b/local.cfg.example
@@ -4,7 +4,7 @@ ensure tracking
 ensure research
 
 sv_licenseKey _LICENSE_KEY_
-set steam_webApiKey webApiKey
+set steam_webApiKey _WEB_API_KEY_
 
 sv_master1 " "
 
