feat(socket)!: Prisma updated to v5 requiring a NodeJS version update.

--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@citizenfx/client": "2.0.6195-1",
     "@citizenfx/server": "2.0.6195-1",
     "@types/howler": "^2.2.7",
-    "@types/jsonwebtoken": "^8.5.8",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.178",
-    "@types/node": "^14.17.0",
+    "@types/node": "16.9.1",
     "@types/styled-components": "^5.1.21",
     "@types/three": "^0.137.0",
     "@types/webpack-env": "^1.16.3",
@@ -53,18 +53,18 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "@prisma/client": "^3.9.2",
+    "@prisma/client": "5",
     "@socket.io/redis-adapter": "^7.1.0",
     "@types/object-hash": "^2.2.1",
     "bufferutil": "^4.0.6",
     "colors": "^1.4.0",
     "dotenv": "^14.2.0",
     "howler": "^2.2.3",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.1",
     "normalize.css": "^8.0.1",
     "object-hash": "^3.0.0",
     "preact": "^10.6.4",
-    "prisma": "^3.9.2",
+    "prisma": "5",
     "prisma-redis-middleware": "^1.1.4",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
