fix: Fixes resource initialization errors.

--- a/resources.cfg
+++ b/resources.cfg
@@ -6,6 +6,8 @@ ensure rdr3-shared
 
 ensure pma-voice
 
+ensure init
+
 ensure base-lua
 ensure base
 ensure queue
@@ -13,12 +15,13 @@ ensure zones
 
 ensure keymapper
 ensure events
+ensure events_manager
 
 ensure target
+ensure prompts
 
 ensure game
 ensure camera
-ensure prompts
 ensure place-object
 ensure databindings
 
@@ -27,8 +30,6 @@ ensure doors
 
 ensure customization
 
-ensure events_manager
-
 ensure ui
 
 ensure emotes
@@ -36,5 +37,6 @@ ensure health
 
 ensure fishing
 ensure saloon
+ensure stable
 
 ensure inventory
