--- a/server.cfg
+++ b/server.cfg
@@ -20,6 +20,7 @@ setr voice_enableRadios false
 setr voice_enableUi false
 
 exec resources.cfg
+exec resources-local.cfg
 
 add_ace group.admin command allow
 add_ace group.admin command.quit deny
