feat(inventory): Item durability. Clothing inventory items.

--- a/resources/base/src/server/tsconfig.json
+++ b/resources/base/src/server/tsconfig.json
@@ -5,6 +5,7 @@
     "../../../../types.d.ts",
     "../../../../env.d.ts",
     "../../../../socket/src/types.d.ts",
+    "../../../../socket/src/types/*.d.ts",
     "../../../**/src/types.d.ts",
     "../../../**/src/server/types.d.ts"
   ]
