--- a/resources/fishing/src/server/tsconfig.json
+++ b/resources/fishing/src/server/tsconfig.json
@@ -4,6 +4,7 @@
     "./",
     "../../../../types.d.ts",
     "../../../../socket/src/types.d.ts",
+    "../../../../socket/src/types/*.d.ts",
     "../../../**/src/types.d.ts",
     "../../../**/src/server/types.d.ts"
   ]
