--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     },
     "types": ["@types/node"],
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "verbatimModuleSyntax": true
   },
   "exclude": [
     "node_modules"
