build: Change webpack/esbuild-loader to rspack. Update artifact to 7290
Lerna Watch times cut significantly.
3-10x faster individual resource build times.

--- a/resources/ui/src/ui/tsconfig.json
+++ b/resources/ui/src/ui/tsconfig.json
@@ -27,7 +27,7 @@
       "jsx": "react-jsx",
       "jsxImportSource": "preact",
       "module": "esnext",
-      "types": ["@citizenfx/client", "@types/node", "webpack-env"],
+      "types": ["@citizenfx/client", "@types/node"],
       "moduleResolution": "node",
       "downlevelIteration": true
   },
