--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "data": {
-    "serverVersion": "6624"
+    "serverVersion": "7290"
   },
   "scripts": {
     "download-server": "cd artifacts && node download.js",
-    "start": "./artifacts/6624/FXServer.exe +exec server.cfg +set onesync on +set svgui_disable 1 +set sv_lan 1 +sv_enforceGameBuild 1491",
+    "start": "./artifacts/7290/FXServer.exe +exec server.cfg +set onesync on +set svgui_disable 1 +set sv_lan 1 +sv_enforceGameBuild 1491",
     "watch": "lerna run watch --stream --parallel",
     "build": "lerna run build --stream --parallel",
     "prettier": "lerna run prettier --stream --parallel",
@@ -18,15 +18,16 @@
   },
   "devDependencies": {
     "7zip": "^0.0.6",
-    "@citizenfx/client": "2.0.6624-1",
-    "@citizenfx/server": "2.0.6624-1",
+    "@citizenfx/client": "2.0.7290-1",
+    "@citizenfx/server": "2.0.7290-1",
+    "@rspack/cli": "^0.7.5",
+    "@rspack/core": "^0.7.5",
     "@types/howler": "^2.2.7",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.178",
     "@types/node": "16.9.1",
     "@types/styled-components": "^5.1.21",
     "@types/three": "^0.137.0",
-    "@types/webpack-env": "^1.16.3",
     "canvas": "^2.11.2",
     "chalk": "^4",
     "change-case": "^4.1.2",
@@ -47,11 +48,7 @@
     "styled-components": "^5.3.3",
     "three": "^0.137.5",
     "ts-node": "^10.4.0",
-    "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "typescript": "4.5.5",
-    "webpack": "^5.36.2",
-    "webpack-cli": "^4.7.0",
-    "webpack-node-externals": "^3.0.0"
+    "typescript": "4.5.5"
   },
   "dependencies": {
     "@prisma/client": "5",
