--- a/resources/[core]/init/package.json
+++ b/resources/[core]/init/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --mode production",
-    "watch": "webpack --mode development --watch",
+    "build": "rspack --mode production",
+    "watch": "rspack --mode development --watch",
     "prettier": "prettier src/**/*.{ts,tsx} --write"
   }
 }
