feat: updated to latest artifact. updated node version. some ui tweaks to health and log. too lazy to figure out what else I did for the last 2 years.

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,8 @@
   "semi": true,
   "tabWidth": 2,
   "trailingComma": "all",
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "importOrder": ["^@lib/(.*)$", "^@styled/(.*)$", "^@uiLib/(.*)$", "^@prisma/(.*)$", "^@/(.*)$", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
