--- a/local.cfg.example
+++ b/local.cfg.example
@@ -11,7 +11,7 @@ sv_master1 " "
 set onesync_forceMigration true
 
 #Used in /webpack/webpack.hot-reload.js for auto reloading resources on change
-rcon_password "qwerty"
+set rcon_password "qwerty"
 
 # obfuscates files with a global key, instead of a per-client key
 #set adhesive_cdnKey "yourSecret"
