--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "data": {
-    "serverVersion": "7290"
+    "serverVersion": "14158"
   },
   "scripts": {
     "download-server": "cd artifacts && node download.js",
-    "start": "./artifacts/7290/FXServer.exe +exec server.cfg +set onesync on +set svgui_disable 1 +set sv_lan 1 +sv_enforceGameBuild 1491",
+    "start": "./artifacts/14158/FXServer.exe +exec server.cfg +set onesync on +set svgui_disable 1 +set sv_lan 1 +sv_enforceGameBuild 1491",
     "watch": "lerna run watch --stream --parallel",
     "build": "lerna run build --stream --parallel",
     "prettier": "lerna run prettier --stream --parallel",
@@ -18,17 +18,17 @@
   },
   "devDependencies": {
     "7zip": "^0.0.6",
-    "@citizenfx/client": "2.0.7290-1",
-    "@citizenfx/server": "2.0.7290-1",
-    "@rspack/cli": "^0.7.5",
-    "@rspack/core": "^0.7.5",
+    "@citizenfx/client": "2.0.14158-1",
+    "@citizenfx/server": "2.0.14158-1",
+    "@rspack/cli": "^1.2.8",
+    "@rspack/core": "^1.2.8",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/howler": "^2.2.7",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.178",
-    "@types/node": "16.9.1",
+    "@types/node": "^22.10.10",
     "@types/styled-components": "^5.1.21",
     "@types/three": "^0.137.0",
-    "canvas": "^2.11.2",
     "chalk": "^4",
     "change-case": "^4.1.2",
     "css-loader": "^6.5.1",
@@ -41,29 +41,29 @@
     "preact-cli": "^3.3.3",
     "preact-cli-svg-loader": "^1.1.0",
     "preact-svg-loader": "^0.2.1",
-    "prettier": "^2.4.1",
-    "sass": "^1.49.0",
+    "prettier": "^3.5.3",
+    "sass": "^1.85.1",
     "sass-loader": "^10.2.0",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.3",
     "three": "^0.137.5",
-    "ts-node": "^10.4.0",
-    "typescript": "4.5.5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   },
   "dependencies": {
     "@prisma/client": "5",
     "@socket.io/redis-adapter": "^7.1.0",
     "@types/object-hash": "^2.2.1",
     "bufferutil": "^4.0.6",
+    "canvas": "^3.1.0",
     "colors": "^1.4.0",
     "dotenv": "^14.2.0",
     "howler": "^2.2.3",
     "jsonwebtoken": "^9.0.1",
     "normalize.css": "^8.0.1",
     "object-hash": "^3.0.0",
-    "preact": "^10.6.4",
+    "preact": "^10.22.1",
     "prisma": "5",
-    "prisma-redis-middleware": "^1.1.4",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "socket.io-redis": "^6.1.1",
