refactor: Replace prisma with drizzle.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "watch": "lerna run watch --stream --parallel",
     "build": "lerna run build --stream --parallel",
     "prettier": "lerna run prettier --stream --parallel",
-    "migrate": "yarn prisma migrate deploy",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
     "ui:dev": "yarn preact watch --refresh --src ./src/ui/dev --cwd ./resources/ui/",
     "create-resource": "node ./resource-generator.js"
   },
@@ -28,11 +31,13 @@
     "@types/lodash": "^4.14.178",
     "@types/node": "^22.10.10",
     "@types/object-hash": "^3.0.6",
+    "@types/pg": "^8.15.4",
     "@types/styled-components": "^5.1.21",
     "@types/three": "^0.137.0",
     "chalk": "^4",
     "change-case": "^4.1.2",
     "css-loader": "^6.5.1",
+    "drizzle-kit": "^0.31.1",
     "esbuild-loader": "^2.21.0",
     "fs-extra": "^11.1.0",
     "glob": "^8.0.3",
@@ -53,18 +58,18 @@
   },
   "dependencies": {
     "@nativewrappers/redm": "^0.0.103",
-    "@prisma/client": "5",
     "@socket.io/redis-adapter": "^7.1.0",
     "bufferutil": "^4.0.6",
     "canvas": "^3.1.0",
     "colors": "^1.4.0",
     "dotenv": "^14.2.0",
+    "drizzle-orm": "^0.44.2",
     "howler": "^2.2.3",
     "jsonwebtoken": "^9.0.1",
     "normalize.css": "^8.0.1",
     "object-hash": "^3.0.0",
+    "pg": "^8.16.0",
     "preact": "^10.22.1",
-    "prisma": "5",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "socket.io-redis": "^6.1.1",
